--- a/3° Bimestre/prjBuffet/css/style.css
+++ b/3° Bimestre/prjBuffet/css/style.css
@@ -7,53 +7,109 @@ header {
 
 section.banner{
     background: #f9e3ff;
+    width: 100%;
+    height: 800px;
 }
 
+div.s1{
+    background:#f9e3ff;
+    width: 50%;
+    float: left;
+}
 
-h1 {
+h1.tituloBanner{
     color: #7d488d;
     text-decoration: none;
     font-size: 500%;
+    text-align: left;
+    margin-left: 80px;
+    margin-top: 80px;
 }
 
-img.img2 {
-    border-radius: 23px;
-    width: 13%;
-    margin-top: 30px;
-    margin-left: 720px;
+div.descBanner {
+    font-size: 170%;
+    text-align: left;
+    margin-left: 140px;
+    margin-top: -40px;
+    color: #a87bc2;
+    text-decoration: none;
+
 }
 
-img.img3 {
-    border-radius: 23px;
-    width: 21%;
-    margin-bottom: 57px;
-    margin-left: 30px;
+div.s2{
+    background: #f9e3ff;
+    width: 50%;
+    float: left;
+    position: relative;
 }
 
 img.img1{
     border-radius: 23px;
-    width: 22%;
-    margin-bottom: 78px;
-    margin-left: 680px;
+    width: 29%;
+    position: absolute;
+    left: 55px;
+    top: 50px;
+}
+
+img.img2{
+    border-radius: 23px;
+    width: 41%;
+    position: absolute;
+    left: 290px;
+    top: 50px;
+}
+
+img.img3{
+    border-radius: 23px;
+    width: 47%;
+    position: absolute;
+    right: 350px;
+    top: 330px;
 }
 
 img.img4{
     border-radius: 23px;
-    width: 14%;
-    margin-bottom: 30px;
-    margin-left: 40px;
+    width: 30%;
+    position: absolute;
+    right: 110px;
+    top: 240px;
 }
 
 img.img5{
     border-radius: 23px;
-    width: 15%;
-    margin-bottom: 70px;
-    margin-left: 730px;
+    width: 33%;
+    position: absolute;
+    right: 400px;
+    top: 540px;
 }
 
 img.img6{
     border-radius: 23px;
-    width: 18%;
-    margin-bottom: 80px;
-    margin-left: 30px;
+    width: 37%;
+    position: absolute;
+    right: 110px;
+    top: 530px;
 }
+
+
+
+
+
+
+
+
+.dm-serif-display-regular {
+    font-family: "DM Serif Display", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+  
+.dm-serif-display-regular-italic {
+    font-family: "DM Serif Display", serif;
+    font-weight: 400;
+    font-style: italic;
+}
+
+
+
+  
