--- a/3° Bimestre/prjBuffet/css/locais.css
+++ b/3° Bimestre/prjBuffet/css/locais.css
@@ -88,7 +88,7 @@ div h1.tituloGardens{
     font-size: 45px;
     text-align: left;
     color: #8164bd;
-    margin-top: 140px;
+    margin-top: 170px;
     margin-left: 140px;
 }
 
@@ -111,35 +111,108 @@ div div.imgsGardens{
 div img.imgG1{
     position: absolute;
     border-radius: 23px;
-    width: 40%;
+    width: 43%;
     margin-right: 110px;
     top: 130px;
-    left: 40px;
+    left: 10px;
 }
 
 div img.imgG2{
     position: absolute;
     border-radius: 23px;
-    width: 32%;
+    width: 35%;
     margin-right: 110px;
-    top: 110px;
-    left: 340px;
+    top: 100px;
+    left: 330px;
 }
 
 div img.imgG3{
     position: absolute;
     border-radius: 23px;
-    width: 32%;
+    width: 35%;
     margin-right: 110px;
-    top: 315px;
-    left: 80px;
+    top: 325px;
+    left: 50px;
 }
 
 div img.imgG4{
     position: absolute;
     border-radius: 23px;
-    width: 32%;
+    width: 33%;
     margin-right: 110px;
-    top: 455px;
-    left: 325px;
+    top: 480px;
+    left: 315px;
+}
+
+
+div.divPalace{
+    background: #ddbdfa;
+    width: 100%;
+    margin: 0%;
+    height: 400px;
+}
+
+div div.imgsPalace{
+    background: #ddbdfa;
+    width: 50%;
+    margin: 0%;
+    height: 760px;
+    float: left;
+    position: relative;
+}
+
+div img.imgP1{
+    position: absolute;
+    border-radius: 23px;
+    width: 41%;
+    margin-left: 90px;
+    top: 140px;
+}
+
+div img.imgP2{
+    position: absolute;
+    border-radius: 23px;
+    width: 35%;
+    left: 395px;
+    top: 170px;
+}
+
+div img.imgP3{
+    position: absolute;
+    border-radius: 23px;
+    width: 35%;
+    left: 110px;
+    top: 370px;
+}
+
+div img.imgP4{
+    position: absolute;
+    border-radius: 23px;
+    width: 33%;
+    left: 380px;
+    top: 515px;
+}
+
+div.descPalace{
+    background: #ddbdfa;
+    width: 50%;
+    margin: 0%;
+    height: 760px;
+    float: left;
+}
+
+div h1.tituloPalace{
+    font-size: 45px;
+    text-align: right;
+    color: white;
+    margin-right: 140px;
+    margin-top: 250px;
+}
+
+div p.contPalace{
+    font-size: 25px;
+    text-align: right;
+    color: white;
+    margin-right: 140px;
+    margin-top: 40px;
 }
